# Eightfold-Multi-Source-Canditate-Data-Transformer

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/configs/: compact_omit.json  default.json  enriched.json
samples/expected/: compact_omit.json  default.json  enriched.json  recruiter_summary.json
samples/scale/: candidates.csv
samples/sources/: garbage_source.json  john_smith_ats.json  john_smith_github.json  john_smith_notes.txt  john_smith_recruiter.csv  john_smith_resume.docx
src/transformer/: __init__.py  cli.py  config.py  merge.py  models.py  pipeline.py  projection.py
src/transformer/adapters/: __init__.py  ats_json.py  base.py  csv_recruiter.py  github.py  notes.py  resume.py
src/transformer/data/: __init__.py  skills_taxonomy.json
src/transformer/enrich/: __init__.py  base.py  cache.py  context.py  llm.py
src/transformer/normalize/: __init__.py  country.py  dates.py  location.py  phones.py  skills.py
src/transformer/web/: __init__.py  api.py
tests/: test_adapters.py  test_api.py  test_cli.py  test_config.py  test_country.py  test_dates.py  test_determinism.py  test_enrichment.py  test_graceful_degradation.py  test_lint.py  test_location.py  test_merge.py  test_ndjson.py  test_phones.py  test_pipeline.py  test_projection.py  test_property_normalizers.py  test_provenance_completeness.py  test_resume_pdf.py  test_resume_realworld.py  test_scale.py  test_skills.py
web/: README.md
web/frontend/: DESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/frontend/src/: App.jsx  StellarIntro.jsx  main.jsx  styles.css
