# ---------------------------------------------------------------------------
# Candidate Data Transformer — packaging + dependency contract.
#
# Two install profiles, by design:
#   pip install -e .          -> the DETERMINISTIC CORE. ZERO LLM packages.
#                                This is the path graded by default.
#   pip install -e ".[llm]"   -> core PLUS the optional, off-by-default
#                                enrichment lane (google-genai).
#
# The hard separation lives here in the metadata, not just in code comments:
# google-genai is ONLY ever pulled in by the `llm` extra. The core literally
# cannot import an LLM SDK that isn't installed.
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Deterministic multi-source candidate data transformer with provenance, confidence, a runtime output-projection engine, and an optional fenced LLM enrichment lane."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Data Platform Engineering" }]
keywords = ["ats", "candidate", "etl", "deterministic", "provenance"]

# --- CORE dependencies: no AI/LLM packages here, on purpose. ---------------
dependencies = [
    "pydantic>=2.6,<3",          # canonical models + output validation
    "phonenumbers>=8.13",        # phone -> E.164
    "pycountry>=23.12",          # country name/code -> ISO-3166-1 alpha-2
    "python-dateutil>=2.8",      # flexible date parsing -> "YYYY-MM"
    "pdfplumber>=0.10",          # PDF resume text extraction
    "python-docx>=1.1",          # DOCX resume text extraction
    "rapidfuzz>=3.6",            # DETERMINISTIC fuzzy skill canonicalization
    "httpx>=0.27",               # GitHub public API (fixture-backed in tests)
    "typer>=0.12",               # CLI
]

[project.optional-dependencies]
# The ONLY place an LLM SDK appears. Installed via `pip install -e ".[llm]"`.
# Pinned to the unified Google Gen AI SDK (`from google import genai`).
llm = ["google-genai>=1.0.0,<3"]
# Optional thin HTTP layer (Stage 9). Wraps the SAME pipeline; no core dep.
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
# Test/dev tooling, kept out of the runtime core.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",   # property-based tests for the pure normalizers
    "fpdf2>=2.7",          # generate a deterministic PDF résumé fixture in tests
    "mypy>=1.10",          # static type gate (backs the "fully type-annotated" claim)
    "ruff>=0.5",           # lint gate
]

[project.scripts]
# Exposes the `transform` CLI entrypoint -> transformer/cli.py:app
transform = "transformer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the skills taxonomy and the py.typed marker inside the wheel.
transformer = ["py.typed", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Benign third-party note from Starlette's TestClient about httpx; not our code.
    "ignore::DeprecationWarning:starlette.*",
    "ignore:.*starlette.testclient.*:Warning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic, high-signal rule set (not the kitchen sink).
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by the formatter, not enforced as errors
    "B008",  # typer.Option/Argument in defaults IS the required Typer pattern
    "B904",  # CLI/API intentionally convert errors to clean exits without chaining
    "UP042", # `(str, Enum)` is a valid, intentional idiom (avoid StrEnum churn)
]

[tool.mypy]
# Scoped to the package; pragmatic (not --strict) to stay green without
# weakening runtime behavior. The point is a real, passing type gate.
python_version = "3.11"
packages = ["transformer"]
ignore_missing_imports = true       # optional [llm]/[web] SDKs may be absent
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
